<?xml version="1.0"?>
<package format="2">
  <name>talker_listener</name>
  <version>0.0.0</version>
  <description>The talker_listener package</description>

  <maintainer email="ashwin@todo.todo">ashwin</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <exec_depend>roscpp</exec_depend>

  <depend>std_msgs</depend>
  <depend>message_generation</depend>
  <depend>message_runtime</depend>
  <depend>std_srvs</depend>

  <export>

  </export>
</package>
